CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(photomontage)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

SET(OpenCV_STATIC OFF)

SET(CMAKE_BUILD_TYPE release)

FIND_PACKAGE(OpenCV REQUIRED)

INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})

ADD_EXECUTABLE(main main.cpp graphCuts.cpp photomontage.cpp  maxflow/graph.cpp)

TARGET_LINK_LIBRARIES(main ${OpenCV_LIBS})
